--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -1,6 +1,3 @@
-
-name: Create Release Archive
-
 on:
   release:
     types: [published]
@@ -21,10 +18,10 @@ jobs:
         run: |
           VERSION=${{ steps.tag.outputs.tag_name }}
           # Copy all files except the excluded ones
-          find . -type f | grep -Ev "exclude_file\.txt" | zip -@ release-${VERSION}.zip
+          find . -type f | grep -Ev "exclude_file\.txt" | zip -@ release-$(date +'%Y%m%d%H%M%S').zip
 
       - name: Upload Release Artifact
         uses: actions/upload-artifact@v2
         with:
           name: release-archive
-          path: release-${{ steps.tag.outputs.tag_name }}.zip
+          path: release-$(date +'%Y%m%d%H%M%S').zip
