--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -7,15 +7,15 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Latest available Ubuntu runner
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3  # Latest version of checkout action
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3  # Latest version of setup-node action
         with:
-          node-version: '14'
+          node-version: '18'  # Using the latest stable Node.js version (v18)
 
       - name: Install dependencies
         run: npm install
@@ -36,7 +36,7 @@ jobs:
           zip -r release-artifacts.zip $WHITELIST
 
       - name: Upload release artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3  # Latest version of upload-artifact action
         with:
           name: release-artifacts
           path: release-artifacts.zip
