--- a/.github/workflows/release_archiver.yml
+++ b/.github/workflows/release_archiver.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      - name: Set up Node.js (adjusted to use node20)
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'  # Change to node20 to avoid deprecation
 
       - name: Install dependencies
         run: npm install
