--- a/.github/workflows/release_archiver.yml
+++ b/.github/workflows/release_archiver.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Enable verbose logging
+         run: set -x
+
       - name: Checkout code
         uses: actions/checkout@v4
 
