--- a/.github/workflows/release_archiver.yml
+++ b/.github/workflows/release_archiver.yml
@@ -10,11 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Enable verbose logging
-         run: set -x
-
-      - name: Checkout code
+      - name: Checkout code from your repository
         uses: actions/checkout@v4
+        with:
+          repository: 'JadianRadiator/RF5-NPC-Checklist'  # Replace with your repository's owner and name
 
       - name: Set up Node.js (adjusted to use node20)
         uses: actions/setup-node@v4
