--- a/.github/workflows/release_archiver.yml
+++ b/.github/workflows/release_archiver.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Create zip archive
         run: |
           # Define blacklist items
-          BLACKLIST=("file1.txt" "folder2")
+          # BLACKLIST=("file1.txt" "folder2")
 
           # Create archive excluding items in the blacklist
           zip -r release-${GITHUB_SHA::8}.zip . -x "${BLACKLIST[@]}"
