--- a/.github/workflows/release_archiver.yml
+++ b/.github/workflows/release_archiver.yml
@@ -10,27 +10,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code from your repository
+      - name: Checkout code from repository
         uses: actions/checkout@v4
-        with:
-          repository: 'JadianRadiator/RF5-NPC-Checklist'  # Replace with your repository's owner and name
 
       - name: Set up Node.js (adjusted to use node20)
         uses: actions/setup-node@v4
         with:
-          node-version: '20'  # Change to node20 to avoid deprecation
+          node-version: '20'
 
       - name: Install dependencies
         run: npm install
+        working-directory: '.'  # Adjust if package.json is in a subdirectory
 
       - name: Create zip archive
         run: |
-          # Define blacklist items
-          # BLACKLIST=("file1.txt" "folder2")
-
-          # Create archive excluding items in the blacklist
           zip -r release-${GITHUB_SHA::8}.zip . -x "${BLACKLIST[@]}"
-      
+
       - name: Upload release artifact
         uses: actions/upload-artifact@v4
         with:
