--- a/.github/workflows/release_archiver.yml
+++ b/.github/workflows/release_archiver.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4
 
 .     - name: Create ZIP file excluding blacklist
-        run: zip -r release-${GITHUB_SHA::8}.zip . -x ".github/*" ".gitignore" "RnD*/*"
+        run: zip -r release-${GITHUB_SHA::8}.zip -x ".github/*" ".gitignore" "RnD*/*"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
