--- a/.github/workflows/release_archiver.yml
+++ b/.github/workflows/release_archiver.yml
@@ -31,19 +31,19 @@ jobs:
 
       - name: Create ZIP file excluding blacklist
         run: |
-          zip -r release.zip . -x ".github/*" ".gitignore" "RnD*/*"
+          zip -r npc_checklist-release.zip . -x ".github/*" ".gitignore" "RnD*/*"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: release
-          path: release.zip
+          path: npc_checklist-release.zip
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ env.VERSION }}
           name: Release ${{ env.VERSION }}
-          files: release.zip
+          files: npc_checklist-release.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
