--- a/.github/workflows/release_archiver.yml
+++ b/.github/workflows/release_archiver.yml
@@ -18,7 +18,7 @@ jobs:
           YEAR=$(date +'%Y')   # 4-digit year (e.g., 2024)
 
           # Combine the date and letter to form the version name
-          VERSION="${MONTH}_${DAY}-${YEAR}"
+          VERSION="${MONTH}_${VERSION="${MONTH}_${DAY}-${YEAR}-$(date +'%H%M%S')"
 
           # Save the version to the environment for later use
           echo "VERSION=$VERSION" >> $GITHUB_ENV
