--- a/.github/workflows/release_archiver.yml
+++ b/.github/workflows/release_archiver.yml
@@ -18,7 +18,7 @@ jobs:
           YEAR=$(date +'%Y')   # 4-digit year (e.g., 2024)
 
           # Create a unique version with a timestamp
-          VERSION="NPC Checklist-$(date +'%H%M%S')"
+          VERSION="NPC Checklist\-$(date +'%H%M%S')"
 
           # Save the version to the environment for later use
           echo "VERSION=$VERSION" >> $GITHUB_ENV
