--- a/.github/workflows/release_archiver.yml
+++ b/.github/workflows/release_archiver.yml
@@ -18,7 +18,7 @@ jobs:
           YEAR=$(date +'%Y')   # 4-digit year (e.g., 2024)
 
           # Create a unique version with a timestamp
-          VERSION="${MONTH}_${DAY}_${YEAR}-$(date +'%H_%M_%S')"
+          VERSION="${MONTH}_${DAY}_${YEAR} $(date +'%H:%M;%S')"
 
           # Save the version to the environment for later use
           echo "VERSION=$VERSION" >> $GITHUB_ENV
