--- a/.github/workflows/release_archiver.yml
+++ b/.github/workflows/release_archiver.yml
@@ -13,19 +13,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Generate Timestamp
-        id: generate_timestamp
+      - name: Generate Short Hash
+        id: generate_short_hash
         run: |
-          # Get the current timestamp in the format hour_minute_second
+          # Get the current timestamp
           TIMESTAMP=$(date +"%H_%M_%S")
           echo "Timestamp: $TIMESTAMP"
           echo "timestamp=$TIMESTAMP" >> $GITHUB_ENV  # Store in environment variable
 
-      - name: Generate Short Hash
-        id: generate_short_hash
-        run: |
           # Encode the timestamp to Base64 and truncate it to 4 characters
-          SHORT_HASH=$(echo -n "$timestamp" | base64 | cut -c1-4)
+          SHORT_HASH=$(echo -n "$TIMESTAMP" | base64 | cut -c1-4)
           echo "Short Hash: $SHORT_HASH"
           echo "short_hash=$SHORT_HASH" >> $GITHUB_ENV  # Store short hash in environment variable
 
@@ -37,16 +34,16 @@ jobs:
           DAY=$(date +'%d')    # 2-digit day (e.g., 24)
           YEAR=$(date +'%Y')   # 4-digit year (e.g., 2024)
 
-          # Create a version string in the format Oct_24_2024-HH_MM_SS
-          VERSION="${MONTH}_${DAY}_${YEAR}-${{ env.timestamp }}"
+          # Create a version string in the format Month_Day_Year-HASH
+          VERSION="${MONTH}_${DAY}_${YEAR}-${{ env.short_hash }}"
           echo "VERSION=$VERSION" >> $GITHUB_ENV  # Store version in environment variable
 
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v0.1.${{ env.short_hash }}  # Tag format using the short hash
-          release_name: Release ${{ env.VERSION }}  # Release name
+          tag_name: ${{ env.short_hash }}  # Use only the short hash for the tag
+          release_name: Release ${{ env.VERSION }}  # Release name in the format Month_Day_Year-HASH
           body: |
             This release includes the following features:
             - Feature 1
